<resources>
    <string name="app_name">COMP304-002_Assignment4</string>
    <string name="main_username">Username:</string>
    <string name="main_password">Password:</string>
    <string name="btnLogin">Log in</string>
    <string name="btnRegister">Register</string>
    <string name="student">Student</string>
    <string name="admin">Admin</string>
    <string-array name="tables">
        <item>Student</item>
        <item>Admin</item>
        <item>Program</item>
        <item>Payment</item>
    </string-array>
    <string-array name="tableCreator">
        <item>CREATE TABLE Student (studentId INTEGER PRIMARY KEY AUTOINCREMENT,
            username TEXT, password TEXT, firstname TEXT, lastname TEXT,
            address TEXT, city TEXT, postalCode TEXT);
        </item>
        <item>CREATE TABLE Admin (employeeId INTEGER PRIMARY KEY AUTOINCREMENT,
            username TEXT, password TEXT, firstname TEXT, lastname TEXT);
        </item>
        <item>CREATE TABLE Program (programCode TEXT PRIMARY KEY,
            programName TEXT, tuitionFee NUMERIC, duration INTEGER, semester INTEGER);
        </item>
        <item>CREATE TABLE Payment (paymentId INTEGER PRIMARY KEY AUTOINCREMENT,
            studentId INTEGER, programCode TEXT,
            totalAmount NUMERIC, amountPaid NUMERIC, balance NUMERIC,
            paymentDate INTEGER, status TEXT);
        </item>
        <item>INSERT INTO Student (username, password, firstname, lastname, address, city, postalCode)
            VALUES('beep', 'boop', 'Beep', 'Boop', '40 Street St', 'Toronto', 'M5J 2M3');
        </item>
        <item>INSERT INTO Admin (username, password, firstname, lastname)
            VALUES('boop', 'beep', 'Boop', 'Beep');
        </item>
        <item>INSERT INTO Program (programCode, programName, tuitionFee, duration, semester)
            VALUES('3409', 'Software Engineering Technology', 2935.50, 3, 6);
        </item>
        <item>INSERT INTO Program (programCode, programName, tuitionFee, duration, semester)
            VALUES('6409', 'Art and Design Fundamentals', 2935.50, 1, 2);
        </item>
        <item>INSERT INTO Program (programCode, programName, tuitionFee, duration, semester)
            VALUES('6423', 'Animation 3D', 6436.50, 2, 4);
        </item>
    </string-array>
</resources>
