<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:orientation="vertical"
    tools:context="com.leicasimile.comp304.comp304_001_assignment4.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_username" />
        <EditText
            android:id="@+id/main_editUsername"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_password" />
        <EditText
            android:id="@+id/main_editPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/main_rgrpUserType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/main_radStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student" />
        <RadioButton
            android:id="@+id/main_radAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin" />
    </RadioGroup>

    <Button
        android:id="@+id/main_btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin" />

</LinearLayout>
